Update buying of cars.html

--- a/buying of cars.html
+++ b/buying of cars.html
@@ -9,7 +9,7 @@ Buying Cars
 <body bgcolor="Red">
 <ol type="a">
 <li>Race cars of all time</li>
-<img src="" width="20%" height="25%">
+<img src="1.jpeg" width="20%" height="25%">
 <li>Rose</li>
 <img src="Rose.jpg" width="20%" height="25%">
 <li>Tulip</li>
